--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,20 @@
 {
-    "test": "English works"
+    "test": "English works",
+
+    "home": "Ruben Naudts",
+    "cv": "CV",
+    "projects": "Projects",
+    "contact": "Contact",
+
+    "about": "About Ruben Naudts",
+    "who": "Who is Ruben?",
+    "whoParagraph": "I am a second year student Applied Informatics who keeps looking for new and original ways to solve problems and improve himself. My main interests are Object Oriented Programming and full stack Web Development.",
+    "drives": "What drives him?",
+    "drivesParagraph": "Throughout my youth, I have always been proud of my ability to learn and adapt quickly. Now I aim to use those abilities to continuously keep improving my skills, and thus also my work. Because of this I believe all problems can be solved and I hardly give up when facing them.",
+
+    "cvDownload": "Click to dowload resume",
+
+    "contactMe": "Contact me!",
+    "contactMeText": "Have a question or want to work together? You can easily contact me using LinkedIn or by mail."
+
 }
