--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -14,7 +14,7 @@
 
     "cvDownload": "Klik om cv te downloaden",
 
-    "contactMe": "Contacteer me!",
+    "contactMe": "Contacteer mij!",
     "contactMeText": "Heb je een vraag of wil je samenwerken? Je kan me gemakkelijk bereiken via LinkedIn of mail."
 
 }
