--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,9 +7,9 @@
     "contact": "Contact",
 
     "about": "About Ruben Naudts",
-    "who": "Who is Ruben?",
+    "who": "Who am I?",
     "whoParagraph": "I am a final year student Applied Informatics who keeps looking for new and original ways to solve problems and improve himself. My main interests are Machine Learning and full stack Web Development.",
-    "drives": "What drives him?",
+    "drives": "What drives me?",
     "drivesParagraph": "Throughout my youth, I have always been proud of my ability to learn and adapt quickly. Now I aim to use those abilities to continuously keep improving my skills, and thus also my work. Because of this I believe all problems can be solved and I don't give up when facing them.",
 
     "contactMe": "Contact me!",
