--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -7,9 +7,9 @@
     "contact": "Contact",
 
     "about": "Over Ruben Naudts",
-    "who": "Wie is Ruben?",
+    "who": "Wie ben ik?",
     "whoParagraph": "Ik ben een laatstejaarsstudent toegepaste informatica die steeds op zoek is naar nieuwe manieren om mezelf te verbeteren en problemen op te lossen. Mijn voornaamste interesses zijn Machine Learning en full stack web development.",
-    "drives": "Wat motiveert hem?",
+    "drives": "Wat motiveert me?",
     "drivesParagraph": "Doorheen mijn jeugd ben ik altijd al trots geweest op mijn capaciteiten om razendsnel bij te leren en mezelf aan te passen. Nu gebruik ik deze kwaliteiten om continu mijn vaardigheden, en daarbij ook mijn werk, te verbeteren. Hierdoor geloof ik dat er voor alle problemen oplossingen bestaan en geef ik niet op wanneer ik moeilijkheden ervaar.",
 
     "contactMe": "Contacteer mij!",
